# notes

./: README.md
lambda/: authorizer.py  exceptions.py  lambda_function.py  pyproject.toml  schemas.py  tools.py
oauth/: advanced_oauth.md
python/: context_managers.py  decorators.py  generators.py  iterators.py
